--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to "Codaisseurup", root_path, class: "navbar-brand" %>
+      <span class="glyphicon glyphicon-glass header-icon" aria-hidden="true"></span>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
