Add many-to-many association between event and category

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,7 +20,10 @@
           <li><%= !@event.includes_food ? ("<s>food</s>").html_safe : "food"%></li>
           <li><%= !@event.includes_drinks ? ("<del>drinks</del>").html_safe : "drinks" %></li>
         </ul>
-
+    <h4>Categories</h4>
+    <% @categories.each do |category| %>
+      <span class="label label-success"><%= category.name %></span>
+    <% end %>
   </div>
 
 </div>
