--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,7 +24,13 @@
   <div class="form-group">
     <%= f.check_box :includes_drinks %> Drinks
   </div>
+  <label>Categories</label>
 
+  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) do |b| %>
+    <div class="form-group">
+      <%= b.check_box(class: "check_box") %> <%= b.object.name %>
+    </div>
+  <% end %>
 
   <label>Publish this event?</label>
 
