Install FactoryGirl, Faker and define factories, add navbar specs

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -35,7 +35,7 @@
   <label>Publish this event?</label>
 
   <div class="form-group">
-    <%= f.check_box :active %> Active
+    <%= f.check_box :active %> Yes
   </div>
 
   <div class="actions">
