--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,16 +4,21 @@
   <div class="panel-body">
 
 
-    <p>Creator <%= @event.user.email %></p>
+    <p>Creator: <%= @event.user.email %></p>
 
     <!-- Main Info -->
     <h4>Main Info</h4>
-    <p>The city <%= @event.location %></p>
+    <p>The city: <%= @event.location %></p>
+    <p><%= @event.capacity %> <%= @event.capacity > 1 ? "People" : "Person" %></p>
 
 
     <!-- About -->
     <h4>About</h4>
     <p><%= @event.description %></p>
+
+    <h4>Dates</h4>
+    <p>The beginning: <%= @event.starts_at.strftime("%d-%m-%y") %></p>
+    <p>The end: <%= @event.ends_at.strftime("%d-%m-%y") %></p>
 
     <h4>Bonuses</h4>
         <ul class="bonuses">
