Create Photo: Views

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @event do |f| %>
+  <%= form_for @event, html: { multipart: true } do |f| %>
 
 
   <div class="form-group">
@@ -31,6 +31,19 @@
       <%= b.check_box(class: "check_box") %> <%= b.object.name %>
     </div>
   <% end %>
+
+  <label>Photos</label>
+
+  <div class="form-group">
+    <span class="btn btn-default">
+      Upload Photos
+      <%= file_field_tag "images[]", type: :file, multiple: true %>
+    </span>
+  </div>
+  
+  <div id="photos">
+    <%= render 'photos/list' %>
+  </div>
 
   <label>Publish this event?</label>
 
