--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,8 +35,13 @@
 
     <h4>Photos</h4>
     <% @event.photos.each do |photo| %>
-    <%= image_tag photo.image %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= image_tag photo.image.thumbnail %>
+      </div>
+    </div>
     <% end %>
+
   </div>
 
 </div>
