--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,6 +42,14 @@
     </div>
     <% end %>
 
+    <h4>Documents</h4>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <%= link_to "Brochure with past events",
+                          @document.document.url %>
+      </div>
+    </div>
+
   </div>
 
 </div>
