Change Document view

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,6 +42,8 @@
     </div>
     <% end %>
 
+    <% if @document %>
+
     <h4>Documents</h4>
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -49,6 +51,8 @@
                           @document.document.url %>
       </div>
     </div>
+
+    <% end %>
 
   </div>
 
